2010-04-12  Ethan A Merritt  <merritt@u.washington.edu

	* term/post.trm: Correct a typo that leads to serious problems with
	font size and placement (introduced by the fontscale code).

2010-04-04  Ethan A Merritt  <merritt@u.washington.edu

	* term/cairo.trm: The cairo terminals were forgetting fontscale
	after the initial application.
	Bugfix

	* src/wxterminal/gp_cairo.c term/cairo.trm: Use-after-free error caused
	a segfault on certain enhanced text strings.
	Bug #2947223

2010-03-28  Ethan A Merritt  <merritt@u.washington.edu

	* docs/gnuplot.doc: State explicitly that the timefmt %y interprets
	a 2 digit year number as being in the range 1969-2068.

2010-03-24  Ethan A Merritt  <merritt@u.washington.edu

	* term/tgif.trm (text_angle): Handle text rotation -270 same as +90.
	Bugfix

2010-03-23  Guy Mann  <guydmann@gmail.com>

	* term/js/gnuplot_mouse.js (mouse_update):
	Repaint current canvas before each incremental update of the zoom box.

2010-03-22  Ethan A Merritt  <merritt@u.washington.edu

	* src/misc.c (lp_parse): Re-write the lp_parse() routine to prevent the
	loading of a user-defined linetype from undoing other linestyle 
	properties given earlier in the same command.

	* src/util3d.h src/util3d.c (draw3d_line_unconditional)
	src/hidden3d (draw_edge draw_line_hidden):  The code was passing in
	top and bottom colors for the hidden3d routines as integer linetypes.
	But loading a whole linetype lost any line properties given explicitly
	in the splot command. Change this so that the top and bottom colors are
	passed as t_colorspec structures instead.

2010-03-21  Tommaso Vinci  <ilbibi@users.sourceforge.net>

	* Provide Humlicek's approximation to the Voigt/Faddeeva function
	  voigt(x,y) = \frac{y}{\pi} \int{\frac{e^{t^2}}{(x-t)^2+y^2}}dt

2010-03-20  Ethan A Merritt  <merritt@u.washington.edu

	* NEWS src/hidden3d.c src/plot3d.c src/graph3d.c docs/gnuplot.doc:

	Add support for 'with impulses' in hidden3d code.  Previously the manual